2007-12-06  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: don't mark padding strings and stock
	items for translation (bug #502087)

2007-11-11  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: the fine line between text fields
	and text boxes seems rather irrelevant here

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: don't include keyboard model
	description in glade file

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties-xkb.c: (set_model_text): fix left-over
	GTK_ENTRY use from last commit

2007-11-03  Denis Washington  <denisw@svn.gnome.org>

	* gnome-keyboard-properties-xkb.c:
	* gnome-keyboard-properties.glade: Replace text entry and
	"Choose..." button for keyboard model with a single chooser
	button.

2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-keyboard-properties.glade: rename first tab to "General"

2007-11-03  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c, gnome-keyboard-properties-xkb.c,
	gnome-keyboard-properties-xkbot.c, gnome-keyboard-properties-xkb.h,
	gnome-keyboard-properties-xkbpv.c, gnome-keyboard-properties.glade,
	gnome-keyboard-properties-xkbltadd.c, gnome-keyboard-properties.c:
	moving layout options to separate popup, according to Denis's mockups.

2007-10-31  Kjartan Maraas  <kmaraas@gnome.org>

	* gnome-keyboard-properties-xkblt.c:
	(xkb_layouts_prepare_selected_tree):
	Fix warnings from sparse. Don't use deprecated signal
	api from gtk+.

2007-08-26  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties.glade: make Add label translatable,
	http://bugzilla.gnome.org/show_bug.cgi?id=470516

2007-08-14  Sergey Udaltsov <svu@gnome.org>

	* gnome-keyboard-properties-xkblt.c: disabling "delete" button for
	number of selected layouts < 1.
	http://bugzilla.gnome.org/show_bug.cgi?id=466749

2007-07-24  Sergey Udaltsov <svu@gnome.org>
