@@ -1,3 +1,11 @@
+2007-12-11  Sergey Udaltsov <svu@gnome.org>
+
+	* gnome-keyboard-properties-xkb.c, gnome-keyboard-properties-xkblt.c,
+	gnome-keyboard-properties-xkb.h, gnome-keyboard-properties-xkbpv.c,
+	gnome-keyboard-properties.glade, gnome-keyboard-properties-xkbltadd.c:
+	making printing available,
+	http://bugzilla.gnome.org/show_bug.cgi?id=502961
+
 2007-12-06  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-keyboard-properties.glade: don't mark padding strings and stock
